<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/display"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="478dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="27dp"
            app:columnCount="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:rowCount="5">


            <Button
                android:id="@+id/buttonClear"
                style="@style/functionButton"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/c"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonNegation"
                style="@style/functionButton"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/negation"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonPercent"
                style="@style/functionButton"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/percent"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/functionButton"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/divide"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/functionButton"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/multiply"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/functionButton"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/subtract"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/functionButton"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:text="@string/add"
                app:layout_column="3"
                app:layout_row="3" />


        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="252dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>